2 pages + image qual + footer + localnav
Re-optimized images, fixed local nav, footer/contact, contact and about pages.

Need to do: 3 more image pages

--- a/css/app.css
+++ b/css/app.css
@@ -35,6 +35,8 @@ h4 {font-family: 'Rufina', serif; padding: 1%;}
 
 p {font-family: 'Rufina', sans-serif; font-size: 1.5em; padding: 10px;}
 
+.p {padding: 0px;}
+
 /* ////////Design////////// */
 
 .clickme {
